# clang-refactor-tests

./: CMakeLists.txt  CollapsibleIfStatement.cpp  CommonSingleFileTesting.hpp  ForLoopStartFromZero.cpp  FuseToSimdVector.cpp  LICENSE  README.md  UseAlgorithm.cpp  UseCompoundAssignOperator.cpp  UseConst.cpp  UseFullyQualifiedTypes.cpp  UseMathConstants.cpp  UseRAII.cpp  UseStdArray.cpp  UseSwap.cpp  UseUnaryOperator.cpp  UseVector.cpp
lit-patches/: patch_Test.txt  patch_main.txt
